--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# General
 spring.application.name=customers-api
+#SERVER CONFIG
+server.port=8081
+# H2 Database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:customers-db
+# JPA / HIBERNATE
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# Actuator
+management.endpoints.web.exposure.include=*
+# Actuator | Health
+management.endpoint.health.show-details=always
+# Actuator | Info
+info.app.name=customers-api
+info.app.description=customer app built by Andynator
+info.app.version=1.0.0
+
+management.info.env.enabled=true
