--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.mspr4</groupId>
     <artifactId>customers-api</artifactId>
-    <version>0.0.</version>
+    <version>0.0.1</version>
     <name>customers-api</name>
     <description>customers-api</description>
     <url/>
@@ -58,6 +58,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
+         <dependency>
+             <groupId>org.postgresql</groupId>
+             <artifactId>postgresql</artifactId>
+             <scope>runtime</scope>
+         </dependency>
         <!-- <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-config</artifactId>
@@ -106,6 +111,9 @@
                     <to>
                         <image>docker.io/andyja/${project.artifactId}:${project.version}</image>
                     </to>
+                    <container>
+                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+                    </container>
                 </configuration>
             </plugin>
         </plugins>
